--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
     <title>Git rules!</title>
 </head>
 <body>
-    
+    <section class="main">
+        <ul class="list">
+            <li class="list-item">
+                <h1 class="title">lorevcnvcmncv,mn.,xcmvn.,</h1>
+                <p class="text">cvjnkx cjbhk jxchbkjh kjhfd jgkjdfl gjlsdf kjglkjsd  f;gjd lfj gdjfg ljsdlg jldfgj</p>
+            </li>
+            <li class="list-item">
+                <h1 class="title">lorevcnvcmncv,mn.,xcmvn.,</h1>
+                <p class="text">cvjnkx cjbhk jxchbkjh kjhfd jgkjdfl gjlsdf kjglkjsd f;gjd lfj gdjfg ljsdlg jldfgj</p>
+            </li>
+            <li class="list-item">
+                <h1 class="title">lorevcnvcmncv,mn.,xcmvn.,</h1>
+                <p class="text">cvjnkx cjbhk jxchbkjh kjhfd jgkjdfl gjlsdf kjglkjsd f;gjd lfj gdjfg ljsdlg jldfgj</p>
+            </li>
+        </ul>
+
+
+    </section>
+    <H1></H1>
+    <footer>
+        <a href="">WebStudio</a>
+        <address>
+            г. Киев, пр-т Леси Украинки, 26
+            <a href="mailto:">info@devstudio.com</a>
+            <a href="tel:">+38 096 111 11 11</a>
+        </address>
+    </footer>
 </body>
 </html>
