--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Git rules!</title>
 </head>
 <body>
@@ -25,7 +26,7 @@
 
 
     </section>
-    <H1></H1>
+   
     <footer>
         <a href="">WebStudio</a>
         <address>
